Update: Live Aunction - Refactor, spacing fixed

--- a/src/styles/ui/NftCard.module.scss
+++ b/src/styles/ui/NftCard.module.scss
@@ -37,7 +37,7 @@
   }
 }
 
-.binding {
+.bidding {
   @apply mt-7 flex flex-row justify-between items-center text-grey-100;
 
   font-size: 0.875rem;
